<resources>
    <string name="app_name">BlogAndroidNetworking</string>
    <string name="title_home">Home</string>
    <string name="title_new_post">New  post</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="signup">signup</string>
    <string name="name_project">Blog Networking</string>
    <string name="post_detail">postdetail</string>
</resources>