<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_new_post"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_new_post" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_post_detail"
        android:icon="@android:color/transparent"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/post_detail" />
</menu>