<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.blogandroidnetworking.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_post_detail"
            app:destination="@id/navigation_post_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_new_post"
        android:name="com.example.blogandroidnetworking.ui.dashboard.NewPostFragment"
        android:label="@string/title_new_post"
        tools:layout="@layout/fragment_new_post" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.blogandroidnetworking.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_post_detail"
        android:name="com.example.blogandroidnetworking.ui.postdetail.PostDetailFragment"
        android:label="postdetail"
        tools:layout="@layout/fragment_post_detail" />
</navigation>